--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FCCX/FCCX_CF.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FCCX/FCCX_CF.cshtml
@@ -16,6 +16,7 @@
         </ul>
         <div id="div_condition_body_QY" class="div_condition_body" style="padding-top: 20px;"></div>
         <div id="div_condition_body_ZJ" class="div_condition_body"></div>
+        <div id="div_condition_body_SJ" class="div_condition_body"></div>
         <div id="div_condition_body_MJ" class="div_condition_body"></div>
     </div>
     <div id="divConditionSelect" class="div_condition_select">
