--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FCCX/FCCX_TD.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FCCX/FCCX_TD.cshtml
@@ -11,11 +11,12 @@
 @section Section_Body {
     <div id="divCondition" class="div_condition">
         <ul class="ul_condition_head">
-            <li id="li_condition_head_spcz" class="li_condition_head">出租</li>
-            <li id="li_condition_head_dtcs" class="li_condition_head">出售</li>
+            <li id="li_condition_head_cz" class="li_condition_head">出租</li>
+            <li id="li_condition_head_cs" class="li_condition_head">出售</li>
         </ul>
         <div id="div_condition_body_QY" class="div_condition_body" style="padding-top: 20px;"></div>
         <div id="div_condition_body_ZJ" class="div_condition_body"></div>
+        <div id="div_condition_body_SJ" class="div_condition_body"></div>
         <div id="div_condition_body_MJ" class="div_condition_body"></div>
     </div>
     <div id="divConditionSelect" class="div_condition_select">
