--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC/FC_CW.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC/FC_CW.cshtml
@@ -65,7 +65,7 @@
                 </span>
                 <div id="divZJDWText" class="div_select_out SRK" style="z-index: 991;">
                     <div id="divZJDWSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                        <span id="spanZJDW" class="span_select spaninput_fontcolor" style="margin-top: 0">元/㎡/天</span>
+                        <span id="spanZJDW" class="span_select spaninput_fontcolor" style="margin-top: 0">元/月</span>
                         <div class="span_select_arrow"></div>
                     </div>
                     <div id="divZJDW" class="div_select_dropdown" style="margin-top: -7px;">
