--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FCCX/FCCX_ESF.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FCCX/FCCX_ESF.cshtml
@@ -10,11 +10,11 @@
 }
 @section Section_Body {
     <div id="divCondition" class="div_condition">
-        <ul class="ul_condition_head">
+        @*<ul class="ul_condition_head">
             <li id="li_condition_head_qyzf" class="li_condition_head">区域找房</li>
             <li id="li_condition_head_dtzf" class="li_condition_head">地铁找房</li>
             <li id="li_condition_head_xqzf" class="li_condition_head">小区找房</li>
-        </ul>
+        </ul>*@
         <div id="div_condition_body_SJ" class="div_condition_body" style="padding-top: 20px;"></div>
         <div id="div_condition_body_PFM" class="div_condition_body"></div>
         <div id="div_condition_body_QY" class="div_condition_body"></div>
