--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC/FC_XZL.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC/FC_XZL.cshtml
@@ -102,7 +102,7 @@
             </div>
             <div class="div_row_right">
                 <span id="spanSJ" class="span_spaninput SRK" style="display: inline-block;">
-                    <input class="input_spaninput spaninput_fontcolor" id="SJ" maxlength="9" column="SJ" type="text" style="width: 100px" />
+                    <input id="SJ" maxlength="9" column="SJ" class="input_spaninput spaninput_fontcolor" type="text" style="width: 100px" />
                     <span class="spaninput_fontcolor">万元</span>
                 </span>
             </div>
@@ -277,6 +277,5 @@
         <div id="divFB" class="div_split" style="display: block; text-align: center; margin-top: 40px;">
             <input type="button" class="btn btn-info input_text" style="height: 50px; font-size: 24px;" id="btnFB" value="发布" />
         </div>
-    </div>
     </div>
 }
