--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/Shared/HTFB.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/Shared/HTFB.cshtml
@@ -162,13 +162,13 @@
             <div id="cellphone" style="display: none">
                 <table class="table" style="width: 600px;">
                     <tr>
-                        <td id="tdSJ">
-                            <input class="form-control input_text" id="SJ" maxlength="11" type="text" style="width: 266px;" column="SJ" placeholder="请输入手机号">
+                        <td id="tdSJH">
+                            <input class="form-control input_text" id="SJH" maxlength="11" type="text" style="width: 266px;" column="SJH" placeholder="请输入手机号">
                             <input type="button" class="btn btn-info" id="btnHQYZM" value="获取验证码" />
                         </td>
                     </tr>
                     <tr>
-                        <td class="Info" id="SJInfo"></td>
+                        <td class="Info" id="SJHInfo"></td>
                     </tr>
                     <tr>
                         <td><input type="text" class="form-control input_text" id="YZM" column="YZM" placeholder="请输入验证码"></td>
