--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FCCX/FCCX_SP.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FCCX/FCCX_SP.cshtml
@@ -14,7 +14,7 @@
             <li id="li_condition_head_spcz" class="li_condition_head">出租</li>
             <li id="li_condition_head_dtcs" class="li_condition_head">出售</li>
         </ul>
-        <div id="div_condition_body_QY" class="div_condition_body" style="padding-top: 20px;"></div>
+        <div id="div_condition_body_QY" class="div_condition_body"></div>
         <div id="div_condition_body_FL" class="div_condition_body"></div>
         <div id="div_condition_body_ZJ" class="div_condition_body"></div>
         <div id="div_condition_body_SJ" class="div_condition_body"></div>
