--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL/CL_ZXC.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL/CL_ZXC.cshtml
@@ -64,7 +64,7 @@
         </div>
         <div id="divZXCCC" class="div_row" style="z-index: 996;">
             <div class="div_row_left" style="margin-left: 128px;">
-                <span class="span_required">*</span>
+                <span class="span_required">&nbsp;</span>
                 <span class="spanFWCZ">尺寸</span>
             </div>
             <div class="div_row_right">
@@ -149,7 +149,7 @@
                 <div id="divBTTip"></div>
             </div>
         </div>
-        <div id="divBCMS" class="div_row" style="height: 253px;">
+        <div id="divBCMS" class="div_row" style="height: 253px; z-index: 986;">
             <div class="div_row_left" style="height: 170px; vertical-align: top;">
                 <span class="span_required" style="vertical-align: top">*</span>
                 <span id="spanBCMS" style="vertical-align: top">补充描述</span>
