--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CLCX/CLCX_HC.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CLCX/CLCX_HC.cshtml
@@ -10,8 +10,8 @@
 }
 @section Section_Body {
     <div id="divCondition" class="div_condition">
-        <div id="div_condition_body_LB" class="div_condition_body" style="padding-top: 20px;"></div>
-        <div id="div_condition_body_PP" class="div_condition_body"></div>
+        <div id="div_condition_body_PP" class="div_condition_body" style="padding-top: 20px;"></div>
+        <div id="div_condition_body_LB" class="div_condition_body"></div>
         <div id="div_condition_body_CX" class="div_condition_body"></div>
         <div id="div_condition_body_JG" class="div_condition_body"></div>
     </div>
