--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC/FC_TD.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC/FC_TD.cshtml
@@ -61,7 +61,7 @@
             </div>
             <div class="div_row_right">
                 <span id="spanZJ" class="span_spaninput SRK" style="display: inline-block;">
-                    <input id="ZJ" maxlength="9" column="ZJ" class="input_spaninput spaninput_fontcolor" type="text" style="width: 124px" />
+                    <input id="ZJ" maxlength="9" column="ZJ" value="面议" class="input_spaninput spaninput_fontcolor" type="text" style="width: 124px" />
                 </span>
                 <div id="divZJDWText" class="div_select_out SRK" style="z-index: 991;">
                     <div id="divZJDWSpan" class="div_select_in" style="border: none; margin-top: 6px;">
