--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL/CL_HC.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL/CL_HC.cshtml
@@ -65,7 +65,7 @@
             <div class="div_row_right">
                 <div id="divCCNFText" class="div_select_out SRK" style="z-index: 997;">
                     <div id="divCCNFSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                        <span id="spanCCNF" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择出厂年限</span>
+                        <span id="spanCCNF" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择出厂年份</span>
                         <div class="span_select_arrow"></div>
                     </div>
                     <div id="divCCNF" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
