--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL/CL_GCC.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL/CL_GCC.cshtml
@@ -121,7 +121,7 @@
                 <span class="spanFWCZ">出厂年份</span>
             </div>
             <div class="div_row_right">
-                <div id="divCCNFText" class="div_select_out SRK" style="z-index: 997;">
+                <div id="divCCNFText" class="div_select_out SRK" style="z-index: 988;">
                     <div id="divCCNFSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                         <span id="spanCCNF" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择出厂年份</span>
                         <div class="span_select_arrow"></div>
@@ -129,7 +129,7 @@
                     <div id="divCCNF" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
                     </div>
                 </div>
-                <div id="divCCYFText" class="div_select_out SRK" style="z-index: 997;">
+                <div id="divCCYFText" class="div_select_out SRK" style="z-index: 987;">
                     <div id="divCCYFSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                         <span id="spanCCYF" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择出厂月份</span>
                         <div class="span_select_arrow"></div>
@@ -138,9 +138,9 @@
                     </div>
                 </div>
             </div>
-            <div id="divGCCCCNFTip" class="Warn" style="z-index: 988; position: relative;"></div>
+            <div id="divGCCCCNFTip" class="Warn" style="z-index: 986; position: relative;"></div>
         </div>
-        <div id="divJG" class="div_row" style="z-index: 987;">
+        <div id="divJG" class="div_row" style="z-index: 985;">
             <div class="div_row_left" style="margin-left: 101px;">
                 <span class="span_required">*</span>
                 <span class="spanFWCZ">转让价格</span>
@@ -151,9 +151,9 @@
                     <span class="spaninput_fontcolor">万元</span>
                 </span>
             </div>
-            <div id="divJGTip" class="Warn" style="z-index: 986; position: relative;"></div>
+            <div id="divJGTip" class="Warn" style="z-index: 984; position: relative;"></div>
         </div>
-        <div id="divSZQY" class="div_row" style="z-index: 985;">
+        <div id="divSZQY" class="div_row" style="z-index: 983;">
             <div class="div_row_left" style="margin-left: 101px;">
                 <span class="span_required">*</span>
                 <span class="spanFWCZ">交易地点</span>
@@ -177,7 +177,7 @@
                     </div>
                 </div>
             </div>
-            <div id="divSZQYTip" class="Warn" style="z-index: 984; position: relative;"></div>
+            <div id="divSZQYTip" class="Warn" style="z-index: 982; position: relative;"></div>
         </div>
         <div id="divXXXX" class="div_split" style="display: block; text-align: left;">
             <span class="span_split">详细信息</span>
@@ -193,7 +193,7 @@
                 <div id="divBTTip"></div>
             </div>
         </div>
-        <div id="divBCMS" class="div_row" style="height: 253px;">
+        <div id="divBCMS" class="div_row" style="height: 253px; z-index: 981;">
             <div class="div_row_left" style="height: 170px; vertical-align: top;">
                 <span class="span_required" style="vertical-align: top">*</span>
                 <span id="spanBCMS" style="vertical-align: top">补充描述</span>
