--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/Shared/XXXX.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/Shared/XXXX.cshtml
@@ -69,7 +69,7 @@
         </div>
     </div>
     <div class="div_shadow" id="div_shadow"></div>
-    <div class="div_close" id="div_close">×</div>
+    <div class="div_close" id="div_close" style="display: none;">×</div>
     @RenderSection("Section_Body", false)
 }
 @RenderBody()
