--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL/CL_QCWXBY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL/CL_QCWXBY.cshtml
@@ -54,16 +54,6 @@
             </div>
             <div id="divJGTip" class="Warn" style="z-index: 992; position: relative;"></div>
         </div>
-        <div id="divFWQY" class="div_row" style="z-index: 998">
-            <div class="div_row_left">
-                <span class="span_required">*</span>
-                <span id="spanFWQY">服务区域</span>
-            </div>
-            <div class="div_row_right">
-                <input id="FWQY" column="FWQY" class="span_spaninput input_input SRK" type="text" placeholder="请输入服务区域"/>
-                <div id="divFWQYTip"></div>
-            </div>
-        </div>
         <div id="divXXXX" class="div_split" style="display: block; text-align: left;">
             <span class="span_split">特色描述</span>
             <em class="em_split"></em>
@@ -119,7 +109,7 @@
         <div id="divSZQY" class="div_row" style="z-index: 991;">
             <div class="div_row_left" style="margin-left: 100px;">
                 <span class="span_required">*</span>
-                <span class="spanFWCZ">详细地址</span>
+                <span class="spanFWCZ">商家地址</span>
             </div>
             <div class="div_row_right">
                 <div id="divQYText" class="div_select_out SRK" style="z-index: 997;">
