--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CW/CW_HNYC.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CW/CW_HNYC.cshtml
@@ -37,7 +37,7 @@
                 <div id="divLBText" class="div_select_out SRK" style="z-index: 997;">
                     <div id="divLBSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                         <input type="hidden" id="LBID"/>
-                        <span id="spanLB" column="PZ" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择品种</span>
+                        <span id="spanLB" column="PZ" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择类别</span>
                         <div class="span_select_arrow"></div>
                     </div>
                     <div id="divLB" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
