--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/QZZP/QZZP_QZZP.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/QZZP/QZZP_QZZP.cshtml
@@ -31,7 +31,8 @@
             <div class="div_row_right">
                 <div id="divZWLBText" class="div_select_out SRK" style="position: relative;">
                     <div id="divZWLBSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                        <input type="hidden" id="ZWLBID"/>
+                        <input type="hidden" id="HYLB" column="HYLB" />
+                        <input type="hidden" id="ZWLBID" />
                         <span id="spanZWLB" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择职位名称</span>
                         <div class="span_select_arrow"></div>
                     </div>
@@ -48,9 +49,9 @@
             </div>
             <div class="div_row_right">
                 <span id="spanZPRS" class="span_spaninput SRK" style="display: inline-block; width: 150px;">
-                        <input class="input_spaninput spaninput_fontcolor" id="ZPRS" maxlength="9" column="ZPRS" type="text" style="width: 120px" />
-                        <span class="spaninput_fontcolor">人</span>
-                    </span>
+                    <input class="input_spaninput spaninput_fontcolor" id="ZPRS" maxlength="9" column="ZPRS" type="text" style="width: 120px" />
+                    <span class="spaninput_fontcolor">人</span>
+                </span>
             </div>
             <div id="divZPRSTip"></div>
         </div>
@@ -124,7 +125,7 @@
             </div>
             <div class="div_row_right">
                 <script id="BCMS" type="text/plain" style="width: 594px; height: 200px; display: inline-block;">
-                    </script>
+                </script>
                 <div id="divBCMSTip" class="Warn"></div>
             </div>
         </div>
@@ -136,7 +137,7 @@
             <div class="div_row_right">
                 <div id="div_upload" class="div_upload">
                     <form action="" enctype="multipart/form-data" id="myform" method="post">
-                        <input id="input_upload" unselectable="on" type="file" multiple="multiple" class="file"/>
+                        <input id="input_upload" unselectable="on" type="file" multiple="multiple" class="file" />
                     </form>
                 </div>
                 <div style="margin-left: 214px; font-size: 14px; color: #999999;">
@@ -171,7 +172,7 @@
                 <span id="spanLXDH">联系人</span>
             </div>
             <div class="div_row_right">
-                <input id="LXR" column="LXR" class="input_input SRK" type="text" placeholder="请输入联系人"/>
+                <input id="LXR" column="LXR" class="input_input SRK" type="text" placeholder="请输入联系人" />
                 <div id="divLXRTip"></div>
             </div>
         </div>
@@ -181,7 +182,7 @@
                 <span id="spanLXDH">联系电话</span>
             </div>
             <div class="div_row_right">
-                <input id="LXDH" maxlength="11" column="LXDH" class="input_input SRK" type="text" placeholder="请输入联系电话"/>
+                <input id="LXDH" maxlength="11" column="LXDH" class="input_input SRK" type="text" placeholder="请输入联系电话" />
                 <div id="divLXDHTip"></div>
             </div>
         </div>
@@ -191,11 +192,11 @@
                 <span id="spanQQ">QQ</span>
             </div>
             <div class="div_row_right">
-                <input column="QQ" class="input_input SRK" type="text" placeholder="请输入QQ"/>
+                <input column="QQ" class="input_input SRK" type="text" placeholder="请输入QQ" />
             </div>
         </div>
         <div id="divFB" class="div_split" style="display: block; text-align: center; margin-top: 40px;">
-            <input type="button" class="btn btn-info input_text" style="height: 50px; font-size: 24px;" id="btnFB" value="发布"/>
+            <input type="button" class="btn btn-info input_text" style="height: 50px; font-size: 24px;" id="btnFB" value="发布" />
         </div>
     </div>
 }
