--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SHFW/SHFW_FWWX.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SHFW/SHFW_FWWX.cshtml
@@ -1,11 +1,11 @@
 ﻿@{
-    ViewBag.Title = "SHFWSHFW_FWWXDK";
+    ViewBag.Title = "SHFWSHFW_FWWX";
     Layout = "~/Areas/Business/Views/Shared/HTFB.cshtml";
 }
 @section Section_Head {
-    <link href="@Url.Content("~/Areas/Business/Css/HTFB/SHFW/SHFW_FWWXDK.css")" rel="stylesheet" />
-    <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/HTFB/SHFW/SHFW_FWWXDK.js")"></script>
-    <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/HTFB/SHFW/SHFW_FWWXDKYZ.js")"></script>
+    <link href="@Url.Content("~/Areas/Business/Css/HTFB/SHFW/SHFW_FWWX.css")" rel="stylesheet" />
+    <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/HTFB/SHFW/SHFW_FWWX.js")"></script>
+    <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/HTFB/SHFW/SHFW_FWWXYZ.js")"></script>
 }
 @section Section_Body {
     <div id="myTabContent" class="div_content">
