--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FCCX/FCCX_ZZF.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FCCX/FCCX_ZZF.cshtml
@@ -30,10 +30,19 @@
         <ul class="ul_body_head">
             <li id="li_body_head_first" class="li_body_head"></li>
             <li class="li_body_head">个人房源</li>
-            <li class="li_body_head">经纪人</li>
-            <li class="li_body_head">热租房源</li>
+            <li class="li_body_head">经纪人房源</li>
+            <li class="li_body_head_sort li_body_head_sort_item" style="margin-right: 245px;">时间<i class="i_body_left_sort_up_gray"></i></li>
+            <li class="li_body_head_sort li_body_head_sort_item">租金<i class="i_body_left_sort_up_gray"></i></li>
+            <li class="li_body_head_sort li_body_head_sort_item">默认</li>
+            <li class="li_body_head_sort">排序:</li>
         </ul>
         <div id="div_body_left" class="div_body_left">
+            @*<div class="div_body_left_sort">
+                <a class="a_body_left_sort">时间</a>
+                <a class="a_body_left_sort">租金</a>
+                <a class="a_body_left_sort">默认</a>
+                <a class="a_body_left_sort">排序:</a>
+            </div>*@
             <ul id="ul_body_left" class="ul_body_left">
             </ul>
             <div class="div_main_info_bottom">
