--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FCCX/FCCX_ZZF.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FCCX/FCCX_ZZF.cshtml
@@ -31,9 +31,8 @@
             <li id="li_body_head_first" class="li_body_head"></li>
             <li class="li_body_head">个人房源</li>
             <li class="li_body_head">经纪人房源</li>
-            <li class="li_body_head_sort li_body_head_sort_item" style="margin-right: 245px;">时间<i class="i_body_left_sort_down_gray"></i></li>
-            <li class="li_body_head_sort li_body_head_sort_item">租金<i class="i_body_left_sort_up_gray"></i></li>
-            <li class="li_body_head_sort li_body_head_sort_item li_body_head_sort_item_active">默认</li>
+            <li class="li_body_head_sort li_body_head_sort_item" style="margin-right: 245px;">租金<i class="i_body_left_sort_up_gray"></i></li>
+            <li class="li_body_head_sort li_body_head_sort_item li_body_head_sort_item_active">时间<i class="i_body_left_sort_down_orange"></i></li>
             <li class="li_body_head_sort">排序:</li>
         </ul>
         <div id="div_body_left" class="div_body_left">
