--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/Shared/SY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/Shared/SY.cshtml
@@ -29,11 +29,11 @@
         </div>
         <div class="div_top_right">
             <span id="span_dl" class="span_top_right">
-                登录
+                您好，请登录
             </span>
-            <span class="span_top_right_fg">/</span>
+            <span class="span_top_right_split"></span>
             <span id="span_zc" class="span_top_right">
-                注册
+                免费注册
             </span>
             <span class="span_top_right_split"></span>
             <span id="span_grzx" class="span_top_right">
