--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/SY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/SY.cshtml
@@ -25,115 +25,63 @@
     </div>
     <div id="div_Body" class="div_body">
         <div class="div_body_top">
-            <div class="div_body_top_left">
-                <ul class="ul_body_top_left">
-                    <li class="li_body_top_left">
+            <div class="div_body_top_inner">
+                <ul class="ul_body_top">
+                    <li class="li_body_top">
                         <p class="p_body_top_left">
-                            <img class="i_body_top_left" src="@Url.Content("~/Areas/Business/Css/images/body_top_zp.png")" />
-                        </p>
-                        <p class="p_body_top_left p_body_top_left_dl">招聘</p>
-                        <p class="p_body_top_left">
-                            <span class="span_body_top_left span_body_top_left_xl">全职</span>
-                            <span class="span_body_top_left">/</span>
-                            <span class="span_body_top_left span_body_top_left_xl">兼职</span>
-                        </p>
-                    </li>
-                    <li class="li_body_top_left">
-                        <p class="p_body_top_left">
-                            <img class="i_body_top_left" src="@Url.Content("~/Areas/Business/Css/images/body_top_esc.png")" />
-                        </p>
-                        <p class="p_body_top_left p_body_top_left_dl">二手车</p>
-                        <p class="p_body_top_left">
-                            <span class="span_body_top_left span_body_top_left_xl">家用</span>
-                            <span class="span_body_top_left">/</span>
-                            <span class="span_body_top_left span_body_top_left_xl">商用</span>
-                        </p>
-                    </li>
-                    <li class="li_body_top_left">
-                        <p class="p_body_top_left">
-                            <img class="i_body_top_left" src="@Url.Content("~/Areas/Business/Css/images/body_top_fc.png")" />
+                            <img class="i_body_top_left" src="@Url.Content("~/Areas/Business/Css/images/SY/TBDH/body_top_fc2.png")"/>
                         </p>
                         <p class="p_body_top_left p_body_top_left_dl">房产</p>
-                        <p class="p_body_top_left">
-                            <span class="span_body_top_left span_body_top_left_xl">租房</span>
-                            <span class="span_body_top_left">/</span>
-                            <span class="span_body_top_left span_body_top_left_xl">买房</span>
-                        </p>
                     </li>
-                    <li class="li_body_top_left">
+                    <li class="li_body_top">
                         <p class="p_body_top_left">
-                            <img class="i_body_top_left" src="@Url.Content("~/Areas/Business/Css/images/body_top_cw.png")" />
+                            <img class="i_body_top_left" src="@Url.Content("~/Areas/Business/Css/images/SY/TBDH/body_top_cl4.png")" />
+                        </p>
+                        <p class="p_body_top_left p_body_top_left_dl">车辆</p>
+                    </li>
+                    <li class="li_body_top">
+                        <p class="p_body_top_left">
+                            <img class="i_body_top_left" src="@Url.Content("~/Areas/Business/Css/images/SY/TBDH/body_top_zp2.png")"/>
+                        </p>
+                        <p class="p_body_top_left p_body_top_left_dl">招聘</p>
+                    </li>
+                    <li class="li_body_top">
+                        <p class="p_body_top_left">
+                            <img class="i_body_top_left" src="@Url.Content("~/Areas/Business/Css/images/SY/TBDH/body_top_cw2.png")"/>
                         </p>
                         <p class="p_body_top_left p_body_top_left_dl">宠物</p>
-                        <p class="p_body_top_left">
-                            <span class="span_body_top_left span_body_top_left_xl">狗</span>
-                            <span class="span_body_top_left">/</span>
-                            <span class="span_body_top_left span_body_top_left_xl">猫</span>
-                            <span class="span_body_top_left">/</span>
-                            <span class="span_body_top_left span_body_top_left_xl">鱼</span>
-                        </p>
                     </li>
-                    <li class="li_body_top_left">
+                    <li class="li_body_top">
                         <p class="p_body_top_left">
-                            <img class="i_body_top_left" src="@Url.Content("~/Areas/Business/Css/images/body_top_essc.png")" />
+                            <img class="i_body_top_left" src="@Url.Content("~/Areas/Business/Css/images/SY/TBDH/body_top_essc.png")"/>
                         </p>
                         <p class="p_body_top_left p_body_top_left_dl">二手市场</p>
-                        <p class="p_body_top_left">
-                            <span class="span_body_top_left span_body_top_left_xl">手机</span>
-                            <span class="span_body_top_left">/</span>
-                            <span class="span_body_top_left span_body_top_left_xl">家电</span>
-                            <span class="span_body_top_left">/</span>
-                            <span class="span_body_top_left span_body_top_left_xl">回收</span>
-                        </p>
                     </li>
-                    <li class="li_body_top_left">
+                    <li class="li_body_top">
                         <p class="p_body_top_left">
-                            <img class="i_body_top_left" src="@Url.Content("~/Areas/Business/Css/images/body_top_shfw.png")" />
+                            <img class="i_body_top_left" src="@Url.Content("~/Areas/Business/Css/images/SY/TBDH/body_top_shfw.png")"/>
                         </p>
                         <p class="p_body_top_left p_body_top_left_dl">生活服务</p>
-                        <p class="p_body_top_left">
-                            <span class="span_body_top_left span_body_top_left_xl">搬家</span>
-                            <span class="span_body_top_left">/</span>
-                            <span class="span_body_top_left span_body_top_left_xl">保姆</span>
-                            <span class="span_body_top_left">/</span>
-                            <span class="span_body_top_left span_body_top_left_xl">家教</span>
-                        </p>
                     </li>
-                    <li class="li_body_top_left">
+                    <li class="li_body_top">
                         <p class="p_body_top_left">
-                            <img class="i_body_top_left" src="@Url.Content("~/Areas/Business/Css/images/body_top_swfw.png")" />
+                            <img class="i_body_top_left" src="@Url.Content("~/Areas/Business/Css/images/SY/TBDH/body_top_swfw.png")"/>
                         </p>
                         <p class="p_body_top_left p_body_top_left_dl">商务服务</p>
-                        <p class="p_body_top_left">
-                            <span class="span_body_top_left span_body_top_left_xl">工商</span>
-                            <span class="span_body_top_left">/</span>
-                            <span class="span_body_top_left span_body_top_left_xl">加盟</span>
-                            <span class="span_body_top_left">/</span>
-                            <span class="span_body_top_left span_body_top_left_xl">租赁</span>
-                        </p>
                     </li>
-                    <li class="li_body_top_left">
+                    <li class="li_body_top">
                         <p class="p_body_top_left">
-                            <img class="i_body_top_left" src="@Url.Content("~/Areas/Business/Css/images/body_top_jypx.png")" />
+                            <img class="i_body_top_left" src="@Url.Content("~/Areas/Business/Css/images/SY/TBDH/body_top_jypx.png")"/>
                         </p>
                         <p class="p_body_top_left p_body_top_left_dl">教育培训</p>
+                    </li>
+                    <li class="li_body_top">
                         <p class="p_body_top_left">
-                            <span class="span_body_top_left span_body_top_left_xl">语言</span>
-                            <span class="span_body_top_left">/</span>
-                            <span class="span_body_top_left span_body_top_left_xl">艺术</span>
-                            <span class="span_body_top_left">/</span>
-                            <span class="span_body_top_left span_body_top_left_xl">技能</span>
+                            <img class="i_body_top_left" src="@Url.Content("~/Areas/Business/Css/images/SY/TBDH/body_top_pfcg2.png")"/>
                         </p>
+                        <p class="p_body_top_left p_body_top_left_dl">批发采购</p>
                     </li>
                 </ul>
-            </div>
-            <div class="div_body_top_right">
-                <div class="div_body_top_right_zxfb">
-                    <p class="p_body_top_right_zxfb">最新发布</p>
-                    <div class="div_ul_body_top_right_zxfb">
-                        <ul id="ul_body_top_right_zxfb" class="ul_body_top_right_zxfb"></ul>
-                    </div>
-                </div>
             </div>
         </div>
         <div class="div_body_middle">
