--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/Other/SY.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/Other/SY.css
@@ -2,25 +2,15 @@
 
 /*首页_主体_上部*/
 .div_body .div_body_top{ width: 1200px;overflow-x: hidden;}
-.div_body .div_body_top .div_body_top_left{ width: 896px;height: 140px;margin-top: 10px;display: inline-block;float: left;background: #ffffff;padding: 10px 0px;}
-.div_body .div_body_top .div_body_top_left .ul_body_top_left{ padding: 0;}
-.div_body .div_body_top .div_body_top_left .ul_body_top_left .li_body_top_left{ width: 110px;float: left;}
-.div_body .div_body_top .div_body_top_left .ul_body_top_left .li_body_top_left .p_body_top_left_dl:hover{ cursor: pointer;color: #ef6100;text-decoration: underline;}
-.div_body .div_body_top .div_body_top_left .ul_body_top_left .li_body_top_left .i_body_top_left{ width: 44px;height: 44px;margin-left: 34px;text-align:center;display: block;background-size: 100%; }
-.div_body .div_body_top .div_body_top_left .ul_body_top_left .li_body_top_left .p_body_top_left{display: block;text-align: center;}
-.div_body .div_body_top .div_body_top_left .ul_body_top_left .li_body_top_left .span_body_top_left{font-size: 12px;color: #999;display: inline-block;text-align: center;}
-.div_body .div_body_top .div_body_top_left .ul_body_top_left .li_body_top_left .span_body_top_left_xl:hover{ cursor: pointer;color: #ef6100;text-decoration: underline;}
-.div_body .div_body_top .div_body_top_right{ width: 292px;height: 140px;margin-top: 10px;padding: 6px 6px;margin-left: 10px;display: inline-block;float: left;background: #ffffff;}
-.div_body .div_body_top .div_body_top_right .div_body_top_right_zxfb{ }
-.div_body .div_body_top .div_body_top_right .div_body_top_right_zxfb .p_body_top_right_zxfb{ font-size: 16px;font-weight: 700;border-bottom: 1px solid #cccccc;display: block;height: 35px;}
-.div_body .div_body_top .div_body_top_right .div_body_top_right_zxfb .div_ul_body_top_right_zxfb{height: 60px;width: 280px;overflow: hidden;}
-.div_body .div_body_top .div_body_top_right .div_body_top_right_zxfb .ul_body_top_right_zxfb{ padding: 0;height: 180px;width: 280px;}
-.div_body .div_body_top .div_body_top_right .div_body_top_right_zxfb .ul_body_top_right_zxfb .li_body_top_right_zxfb{ width: 100%;display: block; }
-.div_body .div_body_top .div_body_top_right .div_body_top_right_zxfb .ul_body_top_right_zxfb .li_body_top_right_zxfb .img_body_top_right_zxfb{ width: 60px;height: 60px;display: inline-block;float: left; }
-.div_body .div_body_top .div_body_top_right .div_body_top_right_zxfb .ul_body_top_right_zxfb .li_body_top_right_zxfb .div_body_top_right_zxfb{ width: 210px;height: 60px;float: right;}
-.div_body .div_body_top .div_body_top_right .div_body_top_right_zxfb .ul_body_top_right_zxfb .li_body_top_right_zxfb .div_body_top_right_zxfb .span_body_top_right_zxfb{ font-size: 12px;display: block;}
-.div_body .div_body_top .div_body_top_right .div_body_top_right_zxfb .ul_body_top_right_zxfb .li_body_top_right_zxfb .div_body_top_right_zxfb .span_body_top_right_zxfb:hover{ color: #ef6100;text-decoration: underline;cursor: pointer;}
-.div_body .div_body_top .div_body_top_right .div_body_top_right_zxfb .ul_body_top_right_zxfb .li_body_top_right_zxfb .div_body_top_right_zxfb .span_body_top_right_zxfb_sj{ color: #999999;font-size: 12px;display: block;margin-top: 5px;}
+.div_body .div_body_top .div_body_top_inner{ width: 100%;height: 140px;margin-top: 10px;display: inline-block;float: left;background: #ffffff;padding: 10px 0px;}
+.div_body .div_body_top .div_body_top_inner .ul_body_top{ padding: 0;}
+.div_body .div_body_top .div_body_top_inner .ul_body_top .li_body_top{ width: 120px;float: left;cursor: pointer;}
+.div_body .div_body_top .div_body_top_inner .ul_body_top .li_body_top .p_body_top_left_dl{padding-left: 20px;}
+.div_body .div_body_top .div_body_top_inner .ul_body_top .li_body_top:hover .p_body_top_left_dl{ cursor: pointer;color: #ef6100;text-decoration: underline;}
+.div_body .div_body_top .div_body_top_inner .ul_body_top .li_body_top .i_body_top_left{ width: 100px;height: 100px;margin-left: 20px;text-align:center;display: block;background-size: 100%; }
+.div_body .div_body_top .div_body_top_inner .ul_body_top .li_body_top .p_body_top_left{display: block;text-align: center;margin: 0;width: 120px;}
+.div_body .div_body_top .div_body_top_inner .ul_body_top .li_body_top .span_body_top_left{font-size: 12px;color: #999;display: inline-block;text-align: center;}
+.div_body .div_body_top .div_body_top_inner .ul_body_top .li_body_top .span_body_top_left_xl:hover{ cursor: pointer;color: #ef6100;text-decoration: underline;}
 
 /*首页_主体_中部*/
 .div_body .div_body_middle{ width: 1200px;overflow-x: hidden;}
