--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/Other/SY.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/Other/SY.css
@@ -5,9 +5,9 @@
 .div_body .div_body_top .div_body_top_inner{ width: 100%;height: 140px;margin-top: 10px;display: inline-block;float: left;background: #ffffff;padding: 10px 0px;}
 .div_body .div_body_top .div_body_top_inner .ul_body_top{ padding: 0;}
 .div_body .div_body_top .div_body_top_inner .ul_body_top .li_body_top{ width: 120px;float: left;cursor: pointer;}
-.div_body .div_body_top .div_body_top_inner .ul_body_top .li_body_top .p_body_top_left_dl{padding-left: 20px;}
+.div_body .div_body_top .div_body_top_inner .ul_body_top .li_body_top .p_body_top_left_dl{padding-left: 10px;}
 .div_body .div_body_top .div_body_top_inner .ul_body_top .li_body_top:hover .p_body_top_left_dl{ cursor: pointer;color: #ef6100;text-decoration: underline;}
-.div_body .div_body_top .div_body_top_inner .ul_body_top .li_body_top .i_body_top_left{ width: 100px;height: 100px;margin-left: 20px;text-align:center;display: block;background-size: 100%; }
+.div_body .div_body_top .div_body_top_inner .ul_body_top .li_body_top .i_body_top_left{ width: 100px;height: 100px;margin-left: 10px;margin-right: 10px;text-align:center;display: block;background-size: 100%; }
 .div_body .div_body_top .div_body_top_inner .ul_body_top .li_body_top .p_body_top_left{display: block;text-align: center;margin: 0;width: 120px;}
 .div_body .div_body_top .div_body_top_inner .ul_body_top .li_body_top .span_body_top_left{font-size: 12px;color: #999;display: inline-block;text-align: center;}
 .div_body .div_body_top .div_body_top_inner .ul_body_top .li_body_top .span_body_top_left_xl:hover{ cursor: pointer;color: #ef6100;text-decoration: underline;}
